<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Button
        android:id="@+id/button_left"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="←"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/joystickView"
        app:layout_constraintEnd_toStartOf="@+id/joystickView"
        app:layout_constraintTop_toTopOf="@+id/joystickView" />

    <Button
        android:id="@+id/button_right"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:text="→"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/joystickView"
        app:layout_constraintStart_toEndOf="@+id/joystickView"
        app:layout_constraintTop_toTopOf="@+id/joystickView" />

    <Button
        android:id="@+id/button_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/button_disconnect"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/button_voidance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_avoidance"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_linefollow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_line_follow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_stop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_linefollow" />

    <Button
        android:id="@+id/button_buzz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/button_buzz"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_voidance" />


    <io.github.controlwear.virtual.joystick.android.JoystickView xmlns:custom="http://schemas.android.com/apk/res-auto"
        android:id="@+id/joystickView"
        android:layout_width="210dp"
        android:layout_height="211dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        custom:JV_backgroundColor="@color/JV_backgroundColor"
        custom:JV_borderColor="@color/JV_borderColor"
        custom:JV_borderWidth="8dp"
        custom:JV_buttonColor="@color/JV_buttonColor"
        custom:layout_constraintBottom_toTopOf="@+id/button_disconnect"
        custom:layout_constraintEnd_toEndOf="parent"
        custom:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_up"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="↑"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/joystickView"
        app:layout_constraintEnd_toEndOf="@+id/joystickView"
        app:layout_constraintStart_toStartOf="@+id/joystickView" />

    <Button
        android:id="@+id/button_down"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="↓"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/joystickView"
        app:layout_constraintStart_toStartOf="@+id/joystickView"
        app:layout_constraintTop_toBottomOf="@+id/joystickView" />

    <TextView
        android:id="@+id/textView_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_buzz" />

    <Button
        android:id="@+id/button_song"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:text="Song"
        app:layout_constraintEnd_toStartOf="@+id/button_linefollow"
        app:layout_constraintStart_toEndOf="@+id/button_voidance"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>